# hccl

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  build.sh
src/: CMakeLists.txt  hccl.cmake  scatter_aicpu_kernel.cmake
src/common/: CMakeLists.txt  alg_env_config.cc  alg_env_config.h  alg_type.cc  binary_stream.h  comm_engine_utils.h  hccl_common.h  inconsistent_check.cc  inconsistent_check.h  log.cc  order_preserved_common.h  static_restore.cc
src/common/hcomm_dlsym/: CMakeLists.txt  dlsym_common.h  hccl_device_comm_dl.cc  hccl_host_comm_dl.cc  hccl_host_comm_dl.h  hccl_inner_dl.cc  hccl_rank_graph_dl.cc  hccl_rank_graph_dl.h  hccl_res_dl.cc  hccl_res_dl.h  hccl_res_expt_dl.cc  hccl_res_expt_dl.h  hcomm_device_dlsym.cc  hcomm_device_profiling_dl.cc  hcomm_diag_dl.cc  hcomm_diag_dl.h  hcomm_dlsym.cc  hcomm_host_profiling_dl.cc  hcomm_primitives_dl.cc  hcomm_primitives_dl.h
src/common/op_graph/: op_util.h  ops_proto_hccl.h
src/ops/all_gather/: all_gather_op.cc
src/ops/all_gather/executor/: ins_v2_all_gather_concurrent_executor.cc  ins_v2_all_gather_concurrent_executor.h  ins_v2_all_gather_omnipipe_2d_executor.cc  ins_v2_all_gather_omnipipe_executor.cc  ins_v2_all_gather_omnipipe_executor.h  ins_v2_all_gather_parallel_executor.cc  ins_v2_all_gather_parallel_executor.h  ins_v2_all_gather_sequence_executor.cc  ins_v2_all_gather_sequence_executor.h  ins_v2_all_gather_sequence_executor_3level.cc  ins_v2_all_gather_sequence_executor_aicpu.cc  ins_v2_all_gather_sequence_executor_aicpu.h  ins_v2_all_gather_sole_executor.cc  ins_v2_all_gather_sole_executor.h
src/ops/all_gather/op_graph/: CMakeLists.txt  all_gather_proto.cc
src/ops/all_gather/selector/: all_gather_auto_selector.cc
src/ops/all_gather_v/: all_gather_v_op.cc  all_gather_v_op.h
src/ops/all_gather_v/executor/: ins_v2_all_gather_v_sole_executor.cc
src/ops/all_gather_v/selector/: all_gather_v_auto_selector.cc
src/ops/all_reduce/: CMakeLists.txt  all_reduce_op.cc  all_reduce_op.h
src/ops/all_reduce/executor/: ins_v2_all_reduce_concurrent_executor.cc  ins_v2_all_reduce_concurrent_executor.h  ins_v2_all_reduce_omnipipe_2d_executor.cc  ins_v2_all_reduce_omnipipe_executor.cc  ins_v2_all_reduce_omnipipe_executor.h  ins_v2_all_reduce_order_preserved_executor.cc  ins_v2_all_reduce_order_preserved_executor.h  ins_v2_all_reduce_parallel_executor.cc  ins_v2_all_reduce_parallel_executor.h  ins_v2_all_reduce_sequence_executor.cc  ins_v2_all_reduce_sequence_executor.h  ins_v2_all_reduce_sequence_executor_aicpu.cc  ins_v2_all_reduce_sequence_executor_aicpu.h  ins_v2_all_reduce_sole_executor.cc  ins_v2_all_reduce_sole_executor.h  ins_v2_all_reduce_two_shot_sole_executor.cc  ins_v2_all_reduce_two_shot_sole_executor.h  ins_v2_allreduce_sequence2die_executor.cc
src/ops/all_reduce/op_graph/: CMakeLists.txt  all_reduce_proto.cc
src/ops/all_reduce/selector/: all_reduce_auto_selector.cc
src/ops/all_to_all_v/: CMakeLists.txt  all_to_all_v_op.cc  all_to_all_v_op.h
src/ops/all_to_all_v/executor/: ins_all_to_all_v_sole_executor.cc  ins_all_to_all_v_sole_executor.h  ins_v2_aiv_all_to_all_v_sole_executor.cc  ins_v2_aiv_all_to_all_v_sole_executor.h  ins_v2_all_to_all_concurrent_executor.cc  ins_v2_all_to_all_concurrent_executor.h  ins_v2_all_to_all_v_concurrent_executor.cc  ins_v2_all_to_all_v_sole_executor.cc  ins_v2_all_to_all_v_sole_executor.h
src/ops/all_to_all_v/op_graph/: CMakeLists.txt  all_to_all_v_proto.cc
src/ops/all_to_all_v/selector/: alltoall_auto_selector.cc  alltoallv_auto_selector.cc  alltoallvc_auto_selector.cc
src/ops/barrier/: CMakeLists.txt  barrier_op.cc  barrier_op.h
src/ops/barrier/executor/: CMakeLists.txt  ins_v2_barrier_sequence_executor.cc  ins_v2_barrier_sequence_executor.h  ins_v2_barrier_sole_executor.cc  ins_v2_barrier_sole_executor.h
src/ops/barrier/selector/: CMakeLists.txt  barrier_auto_selector.cc  barrier_auto_selector.h
src/ops/barrier/template/: CMakeLists.txt
src/ops/batch_send_recv/: batch_send_recv_op.cc
src/ops/batch_send_recv/template/: ins_temp_batch_send_recv_dpu.cc
src/ops/broadcast/: CMakeLists.txt  broadcast_op.cc  broadcast_op.h
src/ops/broadcast/executor/: CMakeLists.txt  ins_v2_broadcast_omnipipe_2d_executor.cc  ins_v2_broadcast_omnipipe_2d_executor.h  ins_v2_broadcast_parallel_executor.cc  ins_v2_broadcast_parallel_executor.h  ins_v2_broadcast_sequence_executor.cc  ins_v2_broadcast_sole_executor.cc  ins_v2_broadcast_sole_executor.h
src/ops/broadcast/op_graph/: CMakeLists.txt  broadcast_proto.cc
src/ops/broadcast/selector/: broadcast_auto_selector.cc  broadcast_auto_selector.h
src/ops/interface_graph_mode/: calc_resource_graph_mode.cc  calc_resource_graph_mode.h
src/ops/op_common/: CMakeLists.txt  aicpu_timeout.h  exec_timeout_manager.cc  omnipipe_data_slice_calc.cc  omnipipe_data_slice_calc.h  omnipipe_scatter_data_slice_calc.cc  omnipipe_scatter_data_slice_calc.h  op_common.cc  op_common.h
src/ops/op_common/executor/: executor_v2_base.cc  executor_v2_base.h
src/ops/op_common/inc/: alg_param.h
src/ops/op_common/selector/: auto_selector_base.cc  auto_selector_base.h
src/ops/op_common/template/: CMakeLists.txt  alg_template_base.cc  alg_template_base.h  alg_v2_template_base.h  ccu_alg_template_base.cc  ccu_alg_template_base.h  omnipipe_template_utils.cc  omnipipe_template_utils.h  template_utils.cc  template_utils.h
src/ops/op_common/topo/: CMakeLists.txt  topo_host.cc  topo_match_1d.cc  topo_match_1d.h  topo_match_3_level.cc  topo_match_3_level.h  topo_match_multilevel.cc  topo_match_pcie_mix.cc  topo_match_pcie_mix.h  topo_match_squeeze_2d.cc  topo_match_squeeze_2d.h  topo_match_ubx.cc  topo_match_ubx.h  topo_match_ubx_1d.cc  topo_match_ubx_1d.h
src/ops/recv/: CMakeLists.txt  recv_op.cc
src/ops/recv/executor/: CMakeLists.txt  (+8 more)
src/ops/reduce/: CMakeLists.txt  reduce_op.cc  reduce_op.h
src/ops/reduce_scatter/: CMakeLists.txt  reduce_scatter_op.cc
src/ops/reduce_scatter_v/: reduce_scatter_v_op.cc  reduce_scatter_v_op.h
src/ops/scatter/: scatter_aicpu_kernel.ini  scatter_op.cc
src/ops/send/: CMakeLists.txt  send_op.cc
(+454 files in other folders)
